# g4lbne

./: .gitignore  CMakeLists.txt  GNUmakefile  README.org  README.txt  ReleaseNotes.txt  g4lbne.cc  hadronic_lists.gmk  readme.fnal.txt  setup-lbne-products.sh  setup.sh  versions.txt
RScripts/: GeantinoCheckOverlap1.r  GeantinoMat1.r  SkinDepthParam_1.r
Rscripts/: GeantinoMatBPhi1.r
example/: copy_fastmc_flux.py  doComp.sh  doComps.sh  eventRateComparison.C  eventRates.C  eventRates.h  example_macro_010.mac  example_macro_011.mac  makeFluxHistograms.C  makeLotsOfFluxHistograms.sh  nudata.C  nudata.h  plotUtils.C  submit_flux.py
gdml/: abs_geomSept13.gdml
include/: LBNEAnalysis.hh  LBNEDataInput.hh  LBNEDecayPipe.hh  LBNEDetectorConstruction.hh  LBNEDetectorMessenger.hh  LBNEEventAction.hh  LBNEHadronAbsorber.hh  LBNEMagneticField.hh  LBNENuWeight.hh  LBNEPlacementMessenger.hh  LBNEPrimaryGeneratorAction.hh  LBNEPrimaryMessenger.hh  LBNERunAction.hh  LBNERunActionMessenger.hh  LBNERunManager.hh  LBNEStackingAction.hh  LBNEStandardPerson.hh  LBNESteppingAction.hh  LBNESteppingActionMessenger.hh  LBNESubDetector.hh  LBNESubVolume.hh  LBNESurveyor.hh  LBNEVisManager.hh  LBNEVolumePlacement.hh  LBNEVolumePlacements.hh  TrackPoint_t.hh
inputs/: lbnedocdb2161v6.input  le010z185i.input
macros/: Nominal.mac  muonExample.mac  test1.mac  test2.mac  test2b.mac  test3.mac  test4.mac  visDAWN.mac  visdawn.mac
setups/: setup_g4lbne_fnal.sh
src/: LBNEAnalysis.cc  LBNEBaffle.cc  LBNEDataInput.cc  LBNEDataNtp_t.cc  LBNEDecayPipe.cc  LBNEDetectorConstruction.cc  LBNEHorns.cc  (+30 more)
(+736 files in other folders)
